--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
           <div class="w-full md:w-2/3">
             <h3 class="text-[#1e1d4c] text-4xl font-bold">TỔNG QUAN VỀ CÔNG TY
             </h3>
-            <ul class="mt-3">
+            <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
                 <p><b>Công ty TNHH Hạ tầng Viễn thông Miền Bắc</b> (Telecom Infrastructure North - TIN) thành lập ngày
                   01/04/2010, là đơn vị đối tác độc quyền của FPT Telecom tại khu vực Miền Bắc và Miền Trung. Trải qua
