--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
           <div class="w-full md:w-2/3">
             <h3 class="text-[#1e1d4c] text-4xl font-bold">Về chúng tôi</h3>
-            <ul class="mt-3">
+            <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
                 <p><b>Công ty TNHH Hạ tầng Viễn thông Miền Bắc</b> (Telecom Infrastructure North Co.,LTD – Viết tắt:
                   TIN)
