change logo and footer

--- a/recruitment.html
+++ b/recruitment.html
@@ -22,7 +22,7 @@
     <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
       <div class="logo">
-        <img src="https://picsum.photos/300/300" alt="" class="w-12 h-12 rounded-md">
+        <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md">
       </div>
       <div class="hidden menu-item sm:block">
         <ul class="flex gap-5 text-lg">
