--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
       <div class="logo">
-        <img src="https://picsum.photos/300/300" alt="" class="w-12 h-12 rounded-md">
+        <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md">
       </div>
       <div class="hidden menu-item sm:block">
         <ul class="flex gap-5 text-lg">
@@ -93,7 +93,7 @@
         <div class="block mt-5 md:flex gap-7">
           <div class="w-full md:w-1/2">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d102626.11117139124!2d-119.71668549717887!3d36.504269511346486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb9fe5f285e3d%3A0x8b5109a227086f55!2zQ2FsaWZvcm5pYSwgSG9hIEvhu7M!5e0!3m2!1svi!2s!4v1718984943346!5m2!1svi!2s"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.183992189476!2d105.7830485747143!3d21.025322787897643!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab1010d7610d%3A0x2c4cc8691797d368!2zVOG6rXAgxJFvw6BuIFZpZXR0ZWw!5e0!3m2!1svi!2s!4v1719164642932!5m2!1svi!2s"
               width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
