--- a/about.html
+++ b/about.html
@@ -4,7 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Giới thiệu - Viettel Tuyển Dụng</title>
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Viettel tuyển dụng">
+  <meta property="og:title" content="VIETTEL | Show us your way">
+  <meta property="og:url" content="https://tuyendung.viettel.vn">
+  <meta property="og:description"
+    content="Cùng Viettel kiến tạo tương lai – Ba điều Viettel sẽ mang đến cho bạn là cơ hội không ngừng sáng tạo, thách thức để khẳng định bản thân và điều kiện để học học và phát triển.">
+  <meta property="fb:app_id" content="213262783496474">
+  <meta property="og:image" content="https://tuyendung.viettel.vn/share/images/market/viettel/social_image.jpg">
+  <meta property="og:image:width" content="574">
+  <meta property="og:image:height" content="240">
+  <link rel='icon' type='image/x-icon' href='./image/LogoNew.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='./image/LogoNew.ico' />
   <link href="./css/flowbite.min.css" rel="stylesheet" />
 </head>
 
@@ -22,7 +33,7 @@
     <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
       <div class="logo">
-        <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md">
+        <a href="/"> <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md"></a>
       </div>
       <div class="hidden menu-item sm:block">
         <ul class="flex gap-5 text-lg">
@@ -482,7 +493,6 @@
         </div>
       </div>
     </div>
-
     <footer>
       <div class="bg-[#ffffff] py-3">
         <div class="px-3 mx-auto sm:px-5 max-w-7xl">
@@ -492,15 +502,15 @@
             <p class="my-3 font-bold">TẬP ĐOÀN CÔNG NGHIỆP - VIỄN THÔNG QUÂN ĐỘI </p>
           </div>
 
-          <div class="flex">
-            <div class="w-2/6">
+          <div class="flex flex-wrap gap-3 md:gap-0">
+            <div class="order-1 w-full text-sm md:w-1/2 lg:w-2/6 md:order-none md:pr-4 md:mt-3">
               <a href="mailto:tuyendung@viettel.com.vn" class="underline">Tuyendung@viettel.com.vn
               </a>
               <p class="mt-3">Lô D26 Khu đô thị mới Cầu Giấy, Phường Yên Hòa, Quận Cầu Giấy, Hà Nội, Việt Nam
               </p>
             </div>
-            <div class="w-2/6">
-              <ul>
+            <div class="w-full md:w-1/2 lg:w-2/6 md:mt-3">
+              <ul class="text-sm">
                 <li>
                   <a href="###">VỀ CHÚNG TÔI</a>
                 </li>
@@ -512,8 +522,8 @@
                 </li>
               </ul>
             </div>
-            <div class="w-1/6">
-              <p>Theo dõi chúng tôi</p>
+            <div class="w-full md:w-1/2 lg:w-1/6 md:mt-3">
+              <p class="text-sm">Theo dõi chúng tôi</p>
               <div class="flex gap-3 mt-3">
                 <div>
                   <a href="https://www.facebook.com/ViettelCareers">
@@ -556,13 +566,13 @@
                 </div>
               </div>
             </div>
-            <div class="w-1/6">
+            <div class="w-full md:w-1/2 lg:w-1/6 md:mt-3">
 
             </div>
           </div>
 
           <div class="my-3">
-            <p>© VIETTEL 2024 </p>
+            <p class="text-sm text-[#828282]">© VIETTEL 2024 </p>
           </div>
 
         </div>
