--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Viettel tuyển dụng">
+  <meta property="og:title" content="VIETTEL | Show us your way">
+  <meta property="og:url" content="https://tuyendung.viettel.vn">
+  <meta property="og:description"
+    content="Cùng Viettel kiến tạo tương lai – Ba điều Viettel sẽ mang đến cho bạn là cơ hội không ngừng sáng tạo, thách thức để khẳng định bản thân và điều kiện để học học và phát triển.">
+  <meta property="fb:app_id" content="213262783496474">
+  <meta property="og:image" content="https://tuyendung.viettel.vn/share/images/market/viettel/social_image.jpg">
+  <meta property="og:image:width" content="574">
+  <meta property="og:image:height" content="240">
+  <link rel='icon' type='image/x-icon' href='./image/LogoNew.ico' />
+  <link rel='shortcut icon' type='image/x-icon' href='./image/LogoNew.ico' />
   <title>Trang chủ - Viettel Tuyển Dụng</title>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
 </head>
@@ -21,7 +33,7 @@
               Vươn lên cùng thử thách
             </a>
           </p>
-          <p class="text-xl text-white w-[90%]">
+          <p class="text-xl text-white w-[90%] mx-auto">
             Viettel đang trên đà tăng trưởng nhanh và đạt nhiều đột phá trên các thị trường trong khu vực. Chúng tôi có
             những kế hoạch thú vị và hy vọng bạn có thể tham gia cùng chúng tôi kiến tạo xã hội số theo cách của bạn.
           </p>
@@ -32,7 +44,7 @@
     <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
       <div class="logo">
-        <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md">
+        <a href="/"> <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md"></a>
       </div>
       <div class="hidden menu-item sm:block">
         <ul class="flex gap-5 text-lg">
