--- a/about.html
+++ b/about.html
@@ -9,13 +9,14 @@
   <meta property="og:title" content="VIETTEL | Show us your way">
   <meta property="og:url" content="https://tuyendung.viettel.vn">
   <meta property="og:description"
-    content="Cùng Viettel kiến tạo tương lai – Ba điều Viettel sẽ mang đến cho bạn là cơ hội không ngừng sáng tạo, thách thức để khẳng định bản thân và điều kiện để học học và phát triển.">
+    content="Cùng Viettel kiến tạo tương lai - Ba điều Viettel sẽ mang đến cho bạn là cơ hội không ngừng sáng tạo, thách thức để khẳng định bản thân và điều kiện để học học và phát triển.">
   <meta property="fb:app_id" content="213262783496474">
-  <meta property="og:image" content="https://tuyendung.viettel.vn/share/images/market/viettel/social_image.jpg">
+  <meta property="og:image" content="./image/social_image.jpg">
   <meta property="og:image:width" content="574">
   <meta property="og:image:height" content="240">
   <link rel='icon' type='image/x-icon' href='./image/LogoNew.ico' />
   <link rel='shortcut icon' type='image/x-icon' href='./image/LogoNew.ico' />
+  <title>Về chúng tôi - Viettel Tuyển Dụng</title>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
 </head>
 
