--- a/recruitment.html
+++ b/recruitment.html
@@ -205,7 +205,7 @@
               <li class="list-disc">
                 <b>Đăng ký nhanh tại link</b>
                 <a href="###"
-                  class="text-blue-500 underline">https://sites.google.com/view/tuyendungtin/%E1%BB%A9ng-tuy%E1%BB%83n-nhanh</a>
+                  class="text-blue-500 underline break-all">https://sites.google.com/view/tuyendungtin/%E1%BB%A9ng-tuy%E1%BB%83n-nhanh</a>
               </li>
               <li class="list-disc">
                 Hoặc gửi CV tới
