--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <div class="relative w-full h-full wrapper">
 
     <div class="w-full h-[520px] relative">
-      <div class="absolute top-0 left-0 w-full h-full bg-gray-500 bg-center bg-cover brightness-75"
+      <div class="absolute top-0 left-0 w-full h-[520px] bg-gray-500 bg-center bg-cover brightness-75"
         style="background-image: url('./image/contact.jpg');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
 
