--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
   <link rel='icon' type='image/x-icon' href='./image/LogoNew.ico' />
   <link rel='shortcut icon' type='image/x-icon' href='./image/LogoNew.ico' />
   <title>Liên hệ - Viettel Tuyển Dụng</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="./css/flowbite.min.css" rel="stylesheet" />
 </head>
 
@@ -30,6 +31,7 @@
 
       </div>
     </div>
+
 
     <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
@@ -67,10 +69,10 @@
       <div class="relative w-full h-full">
         <div class="absolute top-0 left-0 w-full h-full menu-wrapper bg-[#00000080]">
         </div>
-        <div class="fixed top-0 left-0 w-full h-full max-w-sm bg-[#212121]">
+        <div class="fixed top-0 left-0 w-full h-full max-w-80 bg-[#212121]">
           <div class="relative w-full h-full">
 
-            <div class="flex items-center justify-center w-10 h-10 m-2 p-1.5 cursor-pointer" id="menu-close">
+            <div class="flex items-center justify-center w-10 h-10 m-2 mb-4 p-1.5 cursor-pointer" id="menu-close">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="text-white">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
@@ -259,7 +261,6 @@
     </footer>
   </div>
 
-  <script src="https://cdn.tailwindcss.com"></script>
   <script src="./js/flowbite.min.js"></script>
   <script src="./js/index.js"></script>
 </body>
