--- a/contact.html
+++ b/contact.html
@@ -117,16 +117,16 @@
             <p class="text-[#1e1d4c] font-bold mb-2">Về Tuyển Dụng</p>
 
             <ul class="ml-3">
-              <li class="list-disc">
+              <li class="break-all list-disc">
                 Hotline: 0971.333.080
               </li>
-              <li class="list-disc">
+              <li class="break-all list-disc">
                 Email: vieclam@vienthongtin.com
               </li>
-              <li class="list-disc">
+              <li class="break-all list-disc">
                 Trụ sở: Tầng 6, tòa nhà Detech II, 107 Nguyễn Phong Sắc, Cầu Giấy, Hà Nội.
               </li>
-              <li class="list-disc">
+              <li class="break-all list-disc">
                 Fanpage: https://www.facebook.com/VIECLAMVIENTHONGTIN
               </li>
             </ul>
