--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
     <div class="w-full h-[520px] relative">
       <div class="absolute top-0 left-0 w-full h-[520px] bg-gray-500 bg-center bg-cover brightness-75"
-        style="background-image: url('./image/banner-2.jpg');"></div>
+        style="background-image: url('./image/about-image.png');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
 
       </div>
@@ -105,37 +105,53 @@
       <section>
         <div class="block gap-10 my-10 md:flex">
           <div class="w-full md:w-1/3">
-            <img src="./image/about-1.jpg" alt="">
+            <img src="./image/about-1.jpg" alt="" class="w-full">
           </div>
           <div class="w-full md:w-2/3">
-            <h3 class="text-[#1e1d4c] text-4xl font-bold">TỔNG QUAN VỀ CÔNG TY
+            <h3 class="text-[#1e1d4c] text-4xl font-bold">GIÁ TRỊ DẪN DẮT
             </h3>
             <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
-                <p><b>Công ty TNHH Hạ tầng Viễn thông Miền Bắc</b> (Telecom Infrastructure North - TIN) thành lập ngày
-                  01/04/2010, là đơn vị đối tác độc quyền của FPT Telecom tại khu vực Miền Bắc và Miền Trung. Trải qua
-                  nhiều năm hoạt động trong lĩnh vực triển khai - bảo trì dịch vụ viễn thông, TIN đã xây dựng cho mình
-                  một đội ngũ cán bộ nhân viên có chuyên môn và bề dày kinh nghiệm, trải dài trên 29 tỉnh thành với trên
-                  3.000 người. </p>
+                <p class="uppercase">
+                  <b>KIẾN TẠO TƯƠNG LAI
+                    BẠN MƠ ƯỚC</b>
+                </p>
+                <p> Viettel là đơn vị tiên phong mở đường với nhiệm vụ xây dựng một tương lai thông minh và gắn kết. Là
+                  đơn vị dẫn đầu trong ngành, Viettel luôn tìm tòi hướng đi mới cho những vấn đề phức tạp. Bạn có thể áp
+                  dụng những kỹ năng, chuyên môn của mình để giải quyết những vấn đề mới và còn tồn tại tại Viettel. Môi
+                  trường làm việc cởi mở và năng động, khuyến khích trao đổi ý tưởng ở mọi cấp, cho phép bạn làm việc,
+                  sáng tạo theo cách riêng để phát triển sự nghiệp bản thân.
+                </p>
               </li>
               <li class="mb-2 list-disc">
-                <p><b>Với Slogan "Chất lượng tạo niềm tin”</b>, TIN đã khẳng định được vị thế vững chắc của mình trong
-                  lĩnh vực triển khai - bảo trì dịch vụ viễn thông trên toàn quốc và luôn là đối tác độc quyền - đáng
-                  tin cậy của FPT Telecom.
+                <p class="uppercase">
+                  <b>VƯƠN LÊN
+                    CÙNG THỬ THÁCH</b>
+                </p>
+                <p> Viettel cam kết cho bạn nền tảng vững chắc để học hỏi và phát triển. Viettel không ngại trao cơ hội
+                  và trách nhiệm cho những người trẻ tuổi đảm nhiệm vị trí lãnh đạo, tốc độ phát triển sự nghiệp tuỳ
+                  thuộc hoàn toàn vào năng lực của bạn. Viettel sẽ mang đến cho bạn cơ hội được làm việc trong những
+                  lĩnh vực công nghệ tiên tiến, hiện đại nhất. Trong hành trình tại Viettel, bạn cũng luôn nhận được sự
+                  giúp đỡ và hướng dẫn tận tình từ đồng nghiệp và cấp quản lý trong một môi trường công bằng, khuyến
+                  khích sáng kiến, ý tưởng.
+
+                </p>
+              </li>
+              <li class="mb-2 list-disc">
+                <p class="uppercase">
+                  <b>PHÁT TRIỂN
+                    CÙNG VIETTEL</b>
+                </p>
+                <p> Tại Viettel, tăng trưởng chính là trọng tâm. Hành trình trở thành một tập đoàn toàn cầu của Viettel
+                  chỉ mới bắt đầu. Viettel sẽ tạo điều kiện cho bạn thử sức ở rất nhiều lĩnh vực, sản phẩm và địa bàn
+                  khác nhau. Bạn cũng được tiếp xúc với những công nghệ tiên tiến nhất, có cơ hội tạo ra những trải
+                  nghiệm đột phá, góp phần thay đổi xã hội.
                 </p>
               </li>
             </ul>
             <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-full">
               Xem thêm
             </button>
-          </div>
-        </div>
-        <div class="block gap-10 my-10 md:flex">
-          <div class="w-full md:w-1/3">
-            <img src="./image/about-2.jpg" alt="">
-          </div>
-          <div class="w-full md:w-2/3">
-
           </div>
         </div>
       </section>
@@ -183,17 +199,19 @@
 
     <div class="py-7 w-full bg-[#1e1d4c]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
-        <p class="text-2xl font-bold text-white">CON NGƯỜI TIN 💟
+        <p class="text-2xl font-bold text-white">CÙNG VIETTEL
         </p>
-        <p class="mt-3 text-xl italic font-normal text-white">“Humans of TIN” là chuyên mục sẽ chia sẻ về những con
-          người
-          tại
-          TIN.
+        <p class="text-2xl font-bold text-white">KIẾN TẠO
+          TƯƠNG LAI
+        </p>
+
+        <p class="mt-3 text-xl italic font-normal text-white">Ba điều Viettel chắc chắn sẽ cho bạn: cơ hội không ngừng
+          sáng tạo, thách thức để khẳng định bản thân, và điều kiện để học hỏi, phát triển.
         </p>
       </div>
     </div>
 
-    <div class="px-3 mx-auto sm:px-5 main max-w-7xl">
+    <!-- <div class="px-3 mx-auto sm:px-5 main max-w-7xl">
 
       <section>
         <div class="block my-5 md:flex gap-7">
@@ -484,7 +502,7 @@
           </div>
         </div>
       </section>
-    </div>
+    </div> -->
 
 
     <div class="px-3 mx-auto sm:px-5 py-3 bg-[#e9e9e9]">
