--- a/contact.html
+++ b/contact.html
@@ -112,29 +112,28 @@
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="w-full mt-3 md:w-1/2 md:mt-0">
-            <p class="text-[#1e1d4c] font-bold mb-2">Đọc thêm để hiểu hơn về chúng tôi tại</p>
-            <p class="text-[#1e1d4c] font-bold mb-2">Về: <a href="###"></a></p>
+            <p class="text-[#1e1d4c] font-bold mb-2">Đọc thêm để hiểu hơn về chúng tôi</p>
             <p class="text-[#1e1d4c] font-bold mb-2">Về Tuyển Dụng</p>
 
             <ul class="ml-3">
               <li class="break-all list-disc">
-                Hotline: 0971.333.080
+                Hotline: 0
               </li>
               <li class="break-all list-disc">
-                Email: vieclam@vienthongtin.com
+                Email: Tuyendung@viettel.com.vn
+              </li>
+              <li class="break-words list-disc">
+                Lô D26 Khu đô thị mới Cầu Giấy, Phường Yên Hòa, Quận Cầu Giấy, Hà Nội, Việt Nam
               </li>
               <li class="break-all list-disc">
-                Trụ sở: Tầng 6, tòa nhà Detech II, 107 Nguyễn Phong Sắc, Cầu Giấy, Hà Nội.
-              </li>
-              <li class="break-all list-disc">
-                Fanpage: https://www.facebook.com/VIECLAMVIENTHONGTIN
+                Fanpage: https://www.facebook.com/ViettelCareers
               </li>
             </ul>
           </div>
         </div>
       </section>
 
-      <section>
+      <!-- <section>
         <div class="block gap-5 mt-5 md:flex">
           <div class="w-full md:w-1/2">
             <img src="https://picsum.photos/300/300" alt="" class="w-full">
@@ -143,9 +142,9 @@
             <img src="https://picsum.photos/300/300" alt="" class="w-full">
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section>
+      <!-- <section>
         <div class="flex flex-wrap justify-between gap-3 my-5">
           <div>
             <img src="./image/fb.png" alt="" class="w-16">
@@ -160,7 +159,7 @@
             <img src="./image/map.png" alt="" class="w-16">
           </div>
         </div>
-      </section>
+      </section> -->
 
     </div>
 
