--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         style="background-image: url('./image/banner.jpg');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
         <div class="text-center">
-          <p class="text-[33px] text-white underline uppercase">
-            <a href="###">
-              Vươn lên cùng thử thách
+          <p class="text-[33px] text-white uppercase">
+            <a href="###" class="text-4xl font-medium">
+              Show us your way
             </a>
           </p>
           <p class="text-xl text-white w-[90%] mx-auto">
@@ -114,36 +114,40 @@
       <section>
         <div class="block gap-10 my-10 md:flex">
           <div class="w-full md:w-1/3">
-            <img src="./image/about-image.png" alt="">
+            <img src="./image/slider-1.png" alt="">
           </div>
           <div class="w-full md:w-2/3">
-            <h3 class="text-[#1e1d4c] text-4xl font-bold">Về chúng tôi</h3>
+            <h3 class="text-[#1e1d4c] text-4xl font-bold">BIẾN GIẤC MƠ THÀNH HIỆN THỰC
+            </h3>
             <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
-                <p><b>Công ty TNHH Hạ tầng Viễn thông Miền Bắc</b> (Telecom Infrastructure North Co.,LTD – Viết tắt:
-                  TIN)
-                  được thành lập ngày 01/04/2010, là đối tác độc quyền trong lĩnh vực Triển khai - bảo trì dịch vụ cho
-                  nhà
-                  mạng FPT Telecom. Trải qua 12 năm hoạt động, phát triển không ngừng, TIN nhanh chóng gây dựng cho mình
-                  một
-                  đội ngũ cán bộ nhân viên đông đảo với trên 3.500 nhân sự có chuyên môn và bề dày kinh nghiệm, trải dài
-                  trên 29 tỉnh thành. </p>
-              </li>
-              <li class="mb-2 list-disc">
-                <p><b>Với Slogan "Chất lượng tạo niềm tin”</b>, TIN đã khẳng định được vị thế vững chắc của mình trong
-                  lĩnh
-                  vực triển khai - bảo trì dịch vụ viễn thông trên toàn quốc và luôn là đối tác độc quyền - đáng tin cậy
-                  của
-                  FPT Telecom.
-
+                <p>
+                  <b>Hành trình của Viettel mới chỉ bắt đầu</b>
+                </p>
+                <p> Ở Viettel mình được thử sức với rất nhiều dự án khó, có tính thách thức cao. Hành trình của Viettel
+                  mới chỉ bắt đầu và mình rất vui khi được viết tiếp.
                 </p>
               </li>
               <li class="mb-2 list-disc">
-                <p><b>Để đạt được những điều đó</b>, chúng tôi cần bạn, những người tài năng, có đam mê và khát vọng
-                  thành
-                  công, cùng chúng tôi giúp xây dựng và phát triển cho cuộc sống tốt đẹp hơn.
-
-
+                <p>
+                  <b>Thách thức tạo kim cương
+                  </b>
+                </p>
+                <p> Các bài toán tại Viettel mà tôi có dịp tiếp xúc và trải nghiệm đa phần là các bài toán lớn và rất
+                  khó, có những bài toán chưa nơi nào tại Việt Nam từng thực hiện. Chính việc này đã rèn luyện cho bản
+                  thân tôi và các đồng nghiệp một tinh thần làm việc sáng tạo và linh hoạt trong các phương pháp nghiên
+                  cứu và triển khai sản phẩm
+                </p>
+              </li>
+              <li class="mb-2 list-disc">
+                <p>
+                  <b>Công dân toàn cầu với tầm nhìn mới
+                  </b>
+                </p>
+                <p> Tôi thực sự muốn thấy tầm nhìn toàn cầu của Viettel và đương nhiên là về văn hóa Việt Nam. Khi tới
+                  Việt Nam, kết quả được mong đợi là sự phát triển: phát triển về mặt cá nhân và nghề nghiệp. Bạn sẽ
+                  được thay đổi tầm nhìn của mình: thay đổi cách bạn làm việc tại nơi đây, cách họ làm việc, hiểu được
+                  cách đồng nghiệp của bạn ở các nước khác làm việc để cùng nhau làm việc hiệu quả.
                 </p>
               </li>
             </ul>
@@ -157,54 +161,52 @@
         <h3 class="text-[#1e1d4c] text-4xl font-bold">Các vị trí tuyển dụng</h3>
         <div class="grid grid-cols-1 mt-3 sm:grid-cols-2 md:grid-cols-4 gap-y-8 gap-x-7">
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-1.png" alt="" class="w-full h-full">
+            <img src="./image/position-1.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
               <p>
-                <a href="###" class="text-[#1e1d4c] underline"> Giám sát công trình</a>
+                <a href="###" class="text-[#1e1d4c]"> Nhân viên kế toán</a>
               </p>
             </div>
           </div>
           <!--  -->
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-2.png" alt="" class="w-full h-full">
+            <img src="./image/position-2.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Nhân viên quản lý hồ sơ dự án</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên công nghệ thông tin
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-3.png" alt="" class="w-full h-full">
+            <img src="./image/position-3.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Nhân viên kinh doanh</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên marketing
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-4.png" alt="" class="w-full h-full">
+            <img src="./image/position-4.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Kỹ thuật vận hành dự án</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên chăm sóc khách hàng
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-5.png" alt="" class="w-full h-full">
+            <img src="./image/position-5.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Kỹ thuật viên viễn thông</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên quản lý chất lượng
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-6.png" alt="" class="w-full h-full">
+            <img src="./image/position-6.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Thực tập sinh kỹ thuật viễn thông</a></p>
-            </div>
-          </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-7.png" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Nhân viên IT Helpdesk</a></p>
-            </div>
-          </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-8.png" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Chuyên viên quản lý nghiệm vụ viễn thông</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên kinh doanh
+                </a></p>
             </div>
           </div>
         </div>
@@ -215,12 +217,11 @@
       </section>
 
       <section>
-        <h3 class="text-[#1e1d4c] text-4xl font-bold">Chia sẻ từ TIN-ers
+        <h3 class="text-[#1e1d4c] text-4xl font-bold">NƠI LÀM VIỆC BẠN ĐANG TÌM KIẾM
         </h3>
-        <p class="mt-3 italic text-[#1e1d4c] font-medium">Cách tuyệt vời nhất để bạn hiểu về công ty là gặp gỡ những
-          TIN-er và lắng
-          nghe câu chuyện
-          của họ
+        <p class="mt-3 italic text-[#1e1d4c] font-medium">Tập đoàn Công nghiệp - Viễn thông Quân đội (VIETTEL) là nhà
+          cung cấp dịch vụ toàn cầu, luôn đi đầu trong đổi mới sáng tạo và luôn lắng nghe thấu hiểu để đem tới những
+          dịch vụ tốt nhất cho khách hàng.
         </p>
 
         <div id="default-carousel" class="relative w-full mt-3 rounded-lg" data-carousel="slide">
@@ -241,16 +242,6 @@
               <img src="./image/slider-3.png"
                 class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 -" alt="..." />
             </div>
-            <!-- Item 4 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="./image/slider-4.png"
-                class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 -" alt="..." />
-            </div>
-            <!-- Item 5 -->
-            <div class="hidden duration-700 ease-in-out" data-carousel-item>
-              <img src="./image/slider-5.png"
-                class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 -" alt="..." />
-            </div>
           </div>
           <!-- Slider indicators -->
           <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2 rtl:space-x-reverse">
@@ -260,10 +251,7 @@
               data-carousel-slide-to="1"></button>
             <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 3"
               data-carousel-slide-to="2"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 4"
-              data-carousel-slide-to="3"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 5"
-              data-carousel-slide-to="4"></button>
+
           </div>
           <!-- Slider controls -->
           <button type="button"
@@ -315,7 +303,8 @@
             </div>
           </div>
           <div class="w-full md:w-2/6">
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/zHnk6RSEMYc?si=rtCP5iL2_ZjHIWly"
+
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/--LrTQelPLg?si=DDmOaMP1ymB1PfiM"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
