--- a/recruitment.html
+++ b/recruitment.html
@@ -26,12 +26,11 @@
 
     <div class="w-full h-[520px] relative">
       <div class="absolute top-0 left-0 w-full h-[520px] bg-gray-500 bg-center bg-cover brightness-75"
-        style="background-image: url('./image/banner.jpg');"></div>
+        style="background-image: url('./image/find_job.jpg');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
 
       </div>
     </div>
-
 
     <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
@@ -101,59 +100,57 @@
       </div>
     </div>
 
-    <div class="px-3 mx-auto sm:px-5 main max-w-7xl">
+    <div class="px-3 mx-auto sm:px-5 main max-w-7xl md:mt-3">
       <section>
         <h3 class="text-[#1e1d4c] text-4xl font-bold">Các vị trí tuyển dụng</h3>
         <div class="grid grid-cols-1 mt-3 sm:grid-cols-2 md:grid-cols-4 gap-y-8 gap-x-7">
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-1.png" alt="" class="w-full h-full">
+            <img src="./image/position-1.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
               <p>
-                <a href="###" class="text-[#1e1d4c] underline"> Giám sát công trình</a>
+                <a href="###" class="text-[#1e1d4c]"> Nhân viên kế toán</a>
               </p>
             </div>
           </div>
           <!--  -->
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-2.png" alt="" class="w-full h-full">
+            <img src="./image/position-2.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Nhân viên quản lý hồ sơ dự án</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên công nghệ thông tin
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-3.png" alt="" class="w-full h-full">
+            <img src="./image/position-3.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Nhân viên kinh doanh</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên marketing
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-4.png" alt="" class="w-full h-full">
+            <img src="./image/position-4.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Kỹ thuật vận hành dự án</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên chăm sóc khách hàng
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-5.png" alt="" class="w-full h-full">
+            <img src="./image/position-5.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Kỹ thuật viên viễn thông</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên quản lý chất lượng
+                </a></p>
             </div>
           </div>
           <div class="min-w-16 min-h-16">
-            <img src="./image/position-6.png" alt="" class="w-full h-full">
+            <img src="./image/position-6.jpg" alt="" class="w-full h-full">
             <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Thực tập sinh kỹ thuật viễn thông</a></p>
-            </div>
-          </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-7.png" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Nhân viên IT Helpdesk</a></p>
-            </div>
-          </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-8.png" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c] underline">Chuyên viên quản lý nghiệm vụ viễn thông</a></p>
+              <p> <a href="###" class="text-[#1e1d4c]">
+                  Nhân viên kinh doanh
+                </a></p>
             </div>
           </div>
         </div>
@@ -162,7 +159,6 @@
           <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-[80%]">Xem thêm</button>
         </div>
       </section>
-
       <section>
         <div class="block md:flex gap-7">
           <div class="w-full md:w-1/2">
@@ -206,8 +202,7 @@
             <ul class="ml-5 leading-7">
               <li class="list-disc">
                 <b>Đăng ký nhanh tại link</b>
-                <a href="###"
-                  class="text-blue-500 underline break-all">https://sites.google.com/view/tuyendungtin/%E1%BB%A9ng-tuy%E1%BB%83n-nhanh</a>
+                <a href="###" class="text-blue-500 underline break-all"> </a>
               </li>
               <li class="list-disc">
                 Hoặc gửi CV tới
@@ -216,7 +211,7 @@
               </li>
               <li class="list-disc">
                 Mọi thắc mắc cần giải đáp về vị trí liên hệ
-                <b>Hotline: 0971.333.080/0969.236.875</b>
+                <b> Hotline: 0971.333.080/0969.236.875</b>
               </li>
 
 
