update size image

--- a/recruitment.html
+++ b/recruitment.html
@@ -206,12 +206,12 @@
               </li>
               <li class="list-disc">
                 Hoặc gửi CV tới
-                <a href="###" class="text-blue-500 underline">vieclam@vienthongtin.com</a>
+                <a href="tuyendung@viettel.com.vn" class="text-blue-500 underline">Tuyendung@viettel.com.vn</a>
                 Tiêu đề email ghi rõ: Họ tên và vị trí ứng tuyển
               </li>
               <li class="list-disc">
                 Mọi thắc mắc cần giải đáp về vị trí liên hệ
-                <b> Hotline: 0971.333.080/0969.236.875</b>
+                <b> Hotline: </b>
               </li>
 
 
