--- a/about.html
+++ b/about.html
@@ -28,12 +28,21 @@
       <div class="absolute top-0 left-0 w-full h-[520px] bg-gray-500 bg-center bg-cover brightness-75"
         style="background-image: url('./image/about-image.png');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
+        <div class="text-center">
+          <p class="text-[33px] text-white uppercase">
+            <a href="###" class="text-4xl font-medium">
+              Giới thiệu
+            </a>
+          </p>
+          <p class="text-xl text-white w-[90%] mx-auto">
 
+          </p>
+        </div>
       </div>
     </div>
 
 
-    <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
+    <div class="fixed top-[1px] left-0 z-40 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
       <div class="logo">
         <a href="/"> <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md"></a>
@@ -44,7 +53,7 @@
             <a href="/" class="hover:text-white">Trang chủ</a>
           </li>
           <li>
-            <a href="./about.html" class="hover:text-white">Giới thiệu</a>
+            <a href="./about.html" class="text-[#ff2f00]">Giới thiệu</a>
           </li>
           <li>
             <a href="./recruitment.html" class="hover:text-white">Tuyển dụng</a>
@@ -65,39 +74,17 @@
       </div>
     </div>
 
-    <div class="absolute top-0 left-0 z-50 hidden w-full h-full modal-wrapper" id="modal-wrapper">
-      <div class="relative w-full h-full">
-        <div class="absolute top-0 left-0 w-full h-full menu-wrapper bg-[#00000080]">
-        </div>
-        <div class="fixed top-0 left-0 w-full h-full max-w-80 bg-[#212121]">
-          <div class="relative w-full h-full">
-
-            <div class="flex items-center justify-center w-10 h-10 m-2 mb-4 p-1.5 cursor-pointer" id="menu-close">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="text-white">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
-              </svg>
-            </div>
-
-            <div>
-              <ul class="flex flex-col gap-5 text-lg select-none ml-7">
-                <li>
-                  <a href="/" class="text-white select-text">Trang chủ</a>
-                </li>
-                <li>
-                  <a href="./about.html" class="text-white select-text">Giới thiệu</a>
-                </li>
-                <li>
-                  <a href="./recruitment.html" class="text-white select-text">Tuyển dụng</a>
-                </li>
-                <li>
-                  <a href="./contact.html" class="text-white select-text">Liên hệ</a>
-                </li>
-              </ul>
-            </div>
-
-          </div>
-        </div>
+    <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
+      <div class="text-center">
+        <p class="text-[33px] text-white uppercase">
+          <a href="###" class="text-4xl font-medium">
+            Giới thiệu
+          </a>
+        </p>
+        <p class="text-xl text-white w-[90%] mx-auto">
+          Viettel đang trên đà tăng trưởng nhanh và đạt nhiều đột phá trên các thị trường trong khu vực. Chúng tôi có
+          những kế hoạch thú vị và hy vọng bạn có thể tham gia cùng chúng tôi kiến tạo xã hội số theo cách của bạn.
+        </p>
       </div>
     </div>
 
@@ -108,7 +95,7 @@
             <img src="./image/about-1.jpg" alt="" class="w-full">
           </div>
           <div class="w-full md:w-2/3">
-            <h3 class="text-[#1e1d4c] text-4xl font-bold">GIÁ TRỊ DẪN DẮT
+            <h3 class="text-[#ea0029] text-4xl font-bold">GIÁ TRỊ DẪN DẮT
             </h3>
             <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
@@ -149,7 +136,7 @@
                 </p>
               </li>
             </ul>
-            <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-full">
+            <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
               Xem thêm
             </button>
           </div>
@@ -197,7 +184,7 @@
       </section>
     </div>
 
-    <div class="py-7 w-full bg-[#1e1d4c]">
+    <div class="py-7 w-full bg-[#ea0029]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
         <p class="text-2xl font-bold text-white">CÙNG VIETTEL
         </p>
@@ -220,7 +207,7 @@
           </div>
 
           <div class="w-full md:w-2/3">
-            <p class="text-[#1e1d4c] text-2xl font-bold">HUMANS OF TIN - 01</p>
+            <p class="text-[#ea0029] text-2xl font-bold">HUMANS OF TIN - 01</p>
 
             <div id="accordion-collapse-1" data-accordion="collapse">
               <h2 id="accordion-collapse-heading-1">
@@ -289,7 +276,7 @@
           </div>
 
           <div class="w-full md:w-2/3">
-            <p class="text-[#1e1d4c] text-2xl font-bold">HUMANS OF TIN - 02</p>
+            <p class="text-[#ea0029] text-2xl font-bold">HUMANS OF TIN - 02</p>
 
             <div id="accordion-collapse-2" data-accordion="collapse">
 
@@ -360,7 +347,7 @@
           </div>
 
           <div class="w-full md:w-2/3">
-            <p class="text-[#1e1d4c] text-2xl font-bold">HUMANS OF TIN - 03</p>
+            <p class="text-[#ea0029] text-2xl font-bold">HUMANS OF TIN - 03</p>
 
             <div id="accordion-collapse-3" data-accordion="collapse">
               <h2 id="accordion-collapse-heading-3">
@@ -426,7 +413,7 @@
       </section>
     </div>
 
-    <div class="py-7 w-full bg-[#1e1d4c]">
+    <div class="py-7 w-full bg-[#ea0029]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
         <p class="text-2xl font-bold text-white">
           HOẠT ĐỘNG NỔI BẬT KHÁC
@@ -441,7 +428,7 @@
             <img src="./image/about-image.png" alt="" class="w-full max-h-96">
           </div>
           <div class="w-full md:w-2/3">
-            <h3 class="text-[#1e1d4c] text-2xl font-bold uppercase text-center">NGHỈ MÁT TIN HO 2023 - HÀNH TRÌNH RỰC RỠ
+            <h3 class="text-[#ea0029] text-2xl font-bold uppercase text-center">NGHỈ MÁT TIN HO 2023 - HÀNH TRÌNH RỰC RỠ
             </h3>
             <div class="mt-3">
               <p class="mb-2">
@@ -463,7 +450,7 @@
               </p>
             </div>
 
-            <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-full">
+            <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
               Xem chi tiết
             </button>
           </div>
@@ -474,7 +461,7 @@
             <img src="./image/about-image.png" alt="" class="w-full max-h-96">
           </div>
           <div class="w-full md:w-2/3">
-            <h3 class="text-[#1e1d4c] text-2xl font-bold uppercase text-center">NGHỈ MÁT TIN HO 2023 - HÀNH TRÌNH RỰC RỠ
+            <h3 class="text-[#ea0029] text-2xl font-bold uppercase text-center">NGHỈ MÁT TIN HO 2023 - HÀNH TRÌNH RỰC RỠ
             </h3>
             <div class="mt-3">
               <p class="mb-2">
@@ -496,7 +483,7 @@
               </p>
             </div>
 
-            <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-full">
+            <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
               Xem chi tiết
             </button>
           </div>
@@ -507,13 +494,14 @@
 
     <div class="px-3 mx-auto sm:px-5 py-3 bg-[#e9e9e9]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
-        <div class="text-[#0000ff] italic text-center my-3">
+        <div class="text-[#ff2f00] italic text-center my-3">
           <p>
             Tài sản quý nhất của các doanh nghiệp chính là con người!
           </p>
         </div>
       </div>
     </div>
+
     <footer>
       <div class="bg-[#ffffff] py-3">
         <div class="px-3 mx-auto sm:px-5 max-w-7xl">
@@ -533,13 +521,13 @@
             <div class="w-full md:w-1/2 lg:w-2/6 md:mt-3">
               <ul class="text-sm">
                 <li>
-                  <a href="###">VỀ CHÚNG TÔI</a>
+                  <a href="./about.html">VỀ CHÚNG TÔI</a>
                 </li>
                 <li>
-                  <a href="###">TUYỂN DỤNG</a>
+                  <a href="./recruitment.html">TUYỂN DỤNG</a>
                 </li>
                 <li>
-                  <a href="###">ĐÃI NGỘ</a>
+                  <a href="./contact.html">LIÊN HỆ</a>
                 </li>
               </ul>
             </div>
