--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,21 @@
       <div class="absolute top-0 left-0 w-full h-[520px] bg-gray-500 bg-center bg-cover brightness-75"
         style="background-image: url('./image/contact.jpg');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
+        <div class="text-center">
+          <p class="text-[33px] text-white uppercase">
+            <a href="###" class="text-4xl font-medium">
+              Liên hệ
+            </a>
+          </p>
+          <p class="text-xl text-white w-[90%] mx-auto">
 
+          </p>
+        </div>
       </div>
     </div>
 
 
-    <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
+    <div class="fixed top-[1px] left-0 z-40 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
       <div class="logo">
         <a href="/"> <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md"></a>
@@ -50,7 +59,7 @@
             <a href="./recruitment.html" class="hover:text-white">Tuyển dụng</a>
           </li>
           <li>
-            <a href="./contact.html" class="hover:text-white">Liên hệ</a>
+            <a href="./contact.html" class="text-[#ff2f00]">Liên hệ</a>
           </li>
         </ul>
       </div>
@@ -112,12 +121,12 @@
               referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="w-full mt-3 md:w-1/2 md:mt-0">
-            <p class="text-[#1e1d4c] font-bold mb-2">Đọc thêm để hiểu hơn về chúng tôi</p>
-            <p class="text-[#1e1d4c] font-bold mb-2">Về Tuyển Dụng</p>
+            <p class="text-[#ea0029] font-bold mb-2">Đọc thêm để hiểu hơn về chúng tôi</p>
+            <p class="text-[#ea0029] font-bold mb-2">Về Tuyển Dụng</p>
 
             <ul class="ml-3">
               <li class="break-all list-disc">
-                Hotline: 0
+                Hotline: +84 98 1900 911
               </li>
               <li class="break-all list-disc">
                 Email: Tuyendung@viettel.com.vn
@@ -165,7 +174,7 @@
 
     <div class="px-3 mx-auto sm:px-5 py-3 bg-[#e9e9e9]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
-        <div class="text-[#0000ff] italic text-center my-3">
+        <div class="text-[#ff2f00] italic text-center my-3">
           <p>
             Hãy liên hệ với chúng tôi ngay hôm nay!!!
           </p>
@@ -192,13 +201,13 @@
             <div class="w-full md:w-1/2 lg:w-2/6 md:mt-3">
               <ul class="text-sm">
                 <li>
-                  <a href="###">VỀ CHÚNG TÔI</a>
+                  <a href="./about.html">VỀ CHÚNG TÔI</a>
                 </li>
                 <li>
-                  <a href="###">TUYỂN DỤNG</a>
+                  <a href="./recruitment.html">TUYỂN DỤNG</a>
                 </li>
                 <li>
-                  <a href="###">ĐÃI NGỘ</a>
+                  <a href="./contact.html">LIÊN HỆ</a>
                 </li>
               </ul>
             </div>
