--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
+    <div class="fixed top-[1px] left-0 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu z-40"
       id="navbar">
       <div class="logo">
         <a href="/"> <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md"></a>
@@ -50,7 +50,7 @@
       <div class="hidden menu-item sm:block">
         <ul class="flex gap-5 text-lg">
           <li>
-            <a href="/" class="hover:text-white">Trang chủ</a>
+            <a href="/" class="text-[#ff2f00]">Trang chủ</a>
           </li>
           <li>
             <a href="./about.html" class="hover:text-white">Giới thiệu</a>
@@ -117,7 +117,7 @@
             <img src="./image/slider-1.png" alt="">
           </div>
           <div class="w-full md:w-2/3">
-            <h3 class="text-[#1e1d4c] text-4xl font-bold">BIẾN GIẤC MƠ THÀNH HIỆN THỰC
+            <h3 class="text-[#ea0029] text-4xl font-bold">BIẾN GIẤC MƠ THÀNH HIỆN THỰC
             </h3>
             <ul class="mt-3 ml-5">
               <li class="mb-2 list-disc">
@@ -151,82 +151,99 @@
                 </p>
               </li>
             </ul>
-
-            <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-full">Xem thêm</button>
+            <a href="https://forms.gle/s7ynv47imPwTo1aX6" target="_blank">
+              <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
+                Đăng ký dự tuyển
+              </button>
+            </a>
           </div>
         </div>
       </section>
 
       <section>
-        <h3 class="text-[#1e1d4c] text-4xl font-bold">Các vị trí tuyển dụng</h3>
-        <div class="grid grid-cols-1 mt-3 sm:grid-cols-2 md:grid-cols-4 gap-y-8 gap-x-7">
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-1.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p>
-                <a href="###" class="text-[#1e1d4c]"> Nhân viên kế toán</a>
-              </p>
+        <h3 class="text-[#ea0029] text-4xl font-bold">Các vị trí tuyển dụng</h3>
+        <div class="grid grid-cols-1 my-7 md:my-9 sm:grid-cols-2 md:grid-cols-3 md:gap-y-9 md:gap-x-8 gap-y-8 gap-x-7">
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-1.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p>
+                  <a href="###" class="text-[#ea0029]"> Nhân viên kế toán</a>
+                </p>
+              </div>
             </div>
           </div>
           <!--  -->
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-2.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên công nghệ thông tin
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-2.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên công nghệ thông tin
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-3.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên marketing
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-3.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên marketing
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-4.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên chăm sóc khách hàng
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-4.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên chăm sóc khách hàng
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-5.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên quản lý chất lượng
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-5.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên quản lý chất lượng
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-6.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên kinh doanh
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-6.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên kinh doanh
+                  </a></p>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="my-16 text-center">
-          <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-[80%]">Xem thêm</button>
+        <div class="my-5 text-center">
+          <a href="https://forms.gle/s7ynv47imPwTo1aX6" target="_blank">
+            <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-[80%]">Ứng tuyển ngay</button>
+          </a>
         </div>
       </section>
 
       <section>
-        <h3 class="text-[#1e1d4c] text-4xl font-bold">NƠI LÀM VIỆC BẠN ĐANG TÌM KIẾM
+        <h3 class="text-[#ea0029] text-4xl font-bold">NƠI LÀM VIỆC BẠN ĐANG TÌM KIẾM
         </h3>
-        <p class="mt-3 italic text-[#1e1d4c] font-medium">Tập đoàn Công nghiệp - Viễn thông Quân đội (VIETTEL) là nhà
+        <p class="mt-3 italic text-[#000] font-medium">Tập đoàn Công nghiệp - Viễn thông Quân đội (VIETTEL) là nhà
           cung cấp dịch vụ toàn cầu, luôn đi đầu trong đổi mới sáng tạo và luôn lắng nghe thấu hiểu để đem tới những
           dịch vụ tốt nhất cho khách hàng.
         </p>
 
         <div id="default-carousel" class="relative w-full mt-3 rounded-lg" data-carousel="slide">
           <!-- Carousel wrapper -->
-          <div class="relative h-60 md:h-[450px] overflow-hidden rounded-lg lg:h-[700px]">
+          <div class="relative h-60 sm:h-[300px] md:h-[450px] overflow-hidden rounded-lg lg:h-[700px]">
             <!-- Item 1 -->
             <div class="hidden duration-700 ease-in-out" data-carousel-item>
               <img src="./image/slider-1.png"
@@ -294,15 +311,15 @@
       </section>
 
       <section>
-        <div class="block md:flex">
-          <div class="w-full md:w-4/6">
+        <div class="block md:flex md:gap-3">
+          <div class="w-full md:w-2/5 lg:w-2/3">
             <div class="my-8">
               <p class="text-lg italic">Xin chân thành cảm ơn các bạn đã quan tâm tới công ty chúng tôi, chúng tôi rất
                 hân hạnh!
               </p>
             </div>
           </div>
-          <div class="w-full md:w-2/6">
+          <div class="w-full md:w-3/5 lg:w-1/3">
 
             <iframe width="100%" height="315" src="https://www.youtube.com/embed/--LrTQelPLg?si=DDmOaMP1ymB1PfiM"
               title="YouTube video player" frameborder="0"
@@ -314,15 +331,17 @@
     </div>
     <div class="px-3 mx-auto sm:px-5 py-3 bg-[#e9e9e9]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
-        <div class="text-[#0000ff] italic text-center my-3">
-          <p>Nếu bạn vẫn chưa tìm được vị trí phù hợp?
+        <div class="text-[#ff2f00] italic text-center my-3">
+          <p>Nếu bạn đã tìm được vị trí phù hợp
           </p>
-          <p>Hãy để lại thông tin của bạn để nhận các tin tức việc làm mới nhất từ TIN </p>
+          <p>Hãy để lại thông tin của bạn để đăng ký dự tuyển ngay </p>
         </div>
 
-        <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-full">
-          Đăng ký nhận tin
-        </button>
+        <a href="https://forms.gle/s7ynv47imPwTo1aX6" target="_blank">
+          <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-full">
+            Đăng ký dự tuyển
+          </button>
+        </a>
       </div>
     </div>
 
@@ -345,13 +364,13 @@
             <div class="w-full md:w-1/2 lg:w-2/6 md:mt-3">
               <ul class="text-sm">
                 <li>
-                  <a href="###">VỀ CHÚNG TÔI</a>
+                  <a href="./about.html">VỀ CHÚNG TÔI</a>
                 </li>
                 <li>
-                  <a href="###">TUYỂN DỤNG</a>
+                  <a href="./recruitment.html">TUYỂN DỤNG</a>
                 </li>
                 <li>
-                  <a href="###">ĐÃI NGỘ</a>
+                  <a href="./contact.html">LIÊN HỆ</a>
                 </li>
               </ul>
             </div>
@@ -359,7 +378,7 @@
               <p class="text-sm">Theo dõi chúng tôi</p>
               <div class="flex gap-3 mt-3">
                 <div>
-                  <a href="https://www.facebook.com/ViettelCareers">
+                  <a href="https://www.facebook.com/ViettelCareers" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                       class="bi bi-facebook text-[#828282] w-6 h-6" viewBox=" 0 0 16 16">
                       <path
@@ -369,7 +388,7 @@
                 </div>
 
                 <div>
-                  <a href="https://www.youtube.com/@viettelcareers2728">
+                  <a href="https://www.youtube.com/@viettelcareers2728" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                       class="bi bi-youtube text-[#828282] w-6 h-6" viewBox="0 0 16 16">
                       <path
@@ -379,7 +398,7 @@
                 </div>
 
                 <div>
-                  <a href="https://www.linkedin.com/company/viettel-group">
+                  <a href="https://www.linkedin.com/company/viettel-group" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                       class="bi bi-linkedin text-[#828282] w-6 h-6" viewBox="0 0 16 16">
                       <path
@@ -389,7 +408,7 @@
                 </div>
 
                 <div>
-                  <a href="https://www.instagram.com/viettelcareers">
+                  <a href="https://www.instagram.com/viettelcareers" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                       class="bi bi-instagram text-[#828282] w-6 h-6" viewBox="0 0 16 16">
                       <path
