--- a/recruitment.html
+++ b/recruitment.html
@@ -28,11 +28,20 @@
       <div class="absolute top-0 left-0 w-full h-[520px] bg-gray-500 bg-center bg-cover brightness-75"
         style="background-image: url('./image/find_job.jpg');"></div>
       <div class="absolute top-0 left-0 flex items-center justify-center w-full h-full">
+        <div class="text-center">
+          <p class="text-[33px] text-white uppercase">
+            <a href="###" class="text-4xl font-medium">
+              Tuyển dụng
+            </a>
+          </p>
+          <p class="text-xl text-white w-[90%] mx-auto">
 
+          </p>
+        </div>
       </div>
     </div>
 
-    <div class="fixed top-[1px] left-0 z-30 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
+    <div class="fixed top-[1px] left-0 z-40 flex items-center justify-between w-full px-5 py-3 text-gray-200 menu"
       id="navbar">
       <div class="logo">
         <a href="/"> <img src="./image/Logo_viettel.png" alt="" class="w-32 h-8 rounded-md"></a>
@@ -46,7 +55,7 @@
             <a href="./about.html" class="hover:text-white">Giới thiệu</a>
           </li>
           <li>
-            <a href="./recruitment.html" class="hover:text-white">Tuyển dụng</a>
+            <a href="./recruitment.html" class="text-[#ff2f00]">Tuyển dụng</a>
           </li>
           <li>
             <a href="./contact.html" class="hover:text-white">Liên hệ</a>
@@ -102,66 +111,80 @@
 
     <div class="px-3 mx-auto sm:px-5 main max-w-7xl md:mt-3">
       <section>
-        <h3 class="text-[#1e1d4c] text-4xl font-bold">Các vị trí tuyển dụng</h3>
-        <div class="grid grid-cols-1 mt-3 sm:grid-cols-2 md:grid-cols-4 gap-y-8 gap-x-7">
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-1.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p>
-                <a href="###" class="text-[#1e1d4c]"> Nhân viên kế toán</a>
-              </p>
+        <h3 class="text-[#ea0029] text-4xl font-bold">Các vị trí tuyển dụng</h3>
+        <div class="grid grid-cols-1 my-7 md:my-9 sm:grid-cols-2 md:grid-cols-3 md:gap-y-9 md:gap-x-8 gap-y-8 gap-x-7">
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-1.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p>
+                  <a href="###" class="text-[#ea0029]"> Nhân viên kế toán</a>
+                </p>
+              </div>
             </div>
           </div>
           <!--  -->
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-2.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên công nghệ thông tin
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-2.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên công nghệ thông tin
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-3.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên marketing
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-3.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên marketing
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-4.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên chăm sóc khách hàng
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-4.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên chăm sóc khách hàng
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-5.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên quản lý chất lượng
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-5.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên quản lý chất lượng
+                  </a></p>
+              </div>
             </div>
           </div>
-          <div class="min-w-16 min-h-16">
-            <img src="./image/position-6.jpg" alt="" class="w-full h-full">
-            <div class="m-1 text-center">
-              <p> <a href="###" class="text-[#1e1d4c]">
-                  Nhân viên kinh doanh
-                </a></p>
+          <div>
+            <div class="w-full min-h-[200px] h-full">
+              <img src="./image/position-6.jpg" alt="" class="w-full h-full">
+              <div class="m-1 text-center">
+                <p> <a href="###" class="text-[#ea0029]">
+                    Nhân viên kinh doanh
+                  </a></p>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="my-16 text-center">
-          <button class="bg-[#1e1d4c] text-white px-5 py-2 rounded-lg w-[80%]">Xem thêm</button>
+        <div class="my-5 text-center">
+          <a href="https://forms.gle/s7ynv47imPwTo1aX6" target="_blank">
+            <button class="bg-[#ea0029] text-white px-5 py-2 rounded-lg w-[80%]">Ứng tuyển ngay</button>
+          </a>
         </div>
       </section>
       <section>
         <div class="block md:flex gap-7">
-          <div class="w-full md:w-1/2">
+          <div class="w-full md:w-3/5">
             <p class="font-bold">HỒ SƠ DỰ TUYỂN:</p>
             <ul class="ml-5 leading-7">
               <li class="list-disc">
@@ -188,8 +211,8 @@
             </div>
           </div>
 
-          <div class="flex justify-end w-full md:w-1/2">
-            <img src="./image/image-1.png" alt="" class="w-full sm:max-w-sm h-44">
+          <div class="flex justify-end w-full md:w-2/5">
+            <img src="./image/organization.png" alt="" class="w-full h-56 mx-auto sm:max-w-sm">
           </div>
         </div>
       </section>
@@ -201,17 +224,19 @@
             </p>
             <ul class="ml-5 leading-7">
               <li class="list-disc">
-                <b>Đăng ký nhanh tại link</b>
-                <a href="###" class="text-blue-500 underline break-all"> </a>
+                Đăng ký nhanh tại link
+                <a href="https://forms.gle/s7ynv47imPwTo1aX6" target="_blank" class="text-blue-500 underline break-all">
+                  https://forms.gle/s7ynv47imPwTo1aX6</a>
               </li>
               <li class="list-disc">
                 Hoặc gửi CV tới
-                <a href="tuyendung@viettel.com.vn" class="text-blue-500 underline">Tuyendung@viettel.com.vn</a>
+                <a href="mailto:tuyendung@viettel.com.vn" class="text-blue-500 underline">Tuyendung@viettel.com.vn</a>
                 Tiêu đề email ghi rõ: Họ tên và vị trí ứng tuyển
               </li>
               <li class="list-disc">
                 Mọi thắc mắc cần giải đáp về vị trí liên hệ
-                <b> Hotline: </b>
+
+                <p><b><a href="tel:+84981900911"> Hotline: +84 98 1900 911</a> </b></p>
               </li>
 
 
@@ -225,9 +250,9 @@
 
     <div class="px-3 mx-auto sm:px-5 py-3 bg-[#e9e9e9]">
       <div class="px-3 mx-auto sm:px-5 max-w-7xl">
-        <div class="text-[#0000ff] italic text-center my-3">
+        <div class="text-[#ff2f00] italic text-center my-3">
           <p>
-            Hãy gia nhập TIN để trở thành những chiến binh TINER nào bạn ơi!
+            Hãy gia nhập Viettel để trở thành những chiến binh Viettel nào bạn ơi!
           </p>
         </div>
       </div>
@@ -252,13 +277,13 @@
             <div class="w-full md:w-1/2 lg:w-2/6 md:mt-3">
               <ul class="text-sm">
                 <li>
-                  <a href="###">VỀ CHÚNG TÔI</a>
+                  <a href="./about.html">VỀ CHÚNG TÔI</a>
                 </li>
                 <li>
-                  <a href="###">TUYỂN DỤNG</a>
+                  <a href="./recruitment.html">TUYỂN DỤNG</a>
                 </li>
                 <li>
-                  <a href="###">ĐÃI NGỘ</a>
+                  <a href="./contact.html">LIÊN HỆ</a>
                 </li>
               </ul>
             </div>
